<resources>
    <string name="app_name">Bits</string>
    <string name="bits">Tasks</string>
    <string name="achievements">Achievements</string>
    <string name="statistics">Statistics</string>
    <string name="rewards">Rewards</string>
    <string name="feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="share">Share Bits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_new">New</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actionbar_cancel">Cancel</string>
    <string name="actionbar_save">Save</string>
    <string name="radio_day">day</string>
    <string name="radio_week">week</string>
    <string name="radio_month">month</string>
    <string name="radio_year">year</string>
    <string name="I_want_to_do_this">I want to do this</string>
    <string name="times_a">times a</string>
    <string name="put_in_category">select an icon for the Bit</string>
    <string name="create_new_bit">Create New Task</string>
    <string name="settings">Settings</string>
    <string name="whats_on_your_mind">What\'s on your mind? </string>
    <string name="duplicated_title_error">A task with same title already exists.</string>
    <string name="empty_title_error">You need a title to get started!</string>
    <string name="done_on_time_rate">Done on time rate</string>
    <string name="added_recently">Added recently!</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="actionview_tag">ACTION</string>
    <string name="last_record_seems_to_be">Your last action seems to be a </string>
    <string name="do_you_want_to_undo_it">\nDo you want to undo it?</string>
    <string name="on_task"> on task </string>
    <string name="yes_please">Yes, Please</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="achieved">Archived</string>
    <string name="nav_header_bits">Bits</string>
    <string name="nav_header_misc">Misc.</string>
    <string name="burndown_viewpagerstrip_title">Trend</string>
    <string name="task_category_viewpagerstrip_title">Task Category</string>
    <string name="burndown_chart_dateformat">\"dd/MM/yyyy\"</string>
    <string name="burndown_chart_title">Progress Trend</string>
    <string name="task_category_chart_title">Task Count by Category</string>
    <string name="burndown_chart_datetitle">Date</string>
    <string name="burndown_chart_counttitle">Burndown</string>
    <string name="spinner_text_days">days</string>
    <string name="spinner_text_for">for</string>
    <string name="spinner_text_show">Display</string>
    <string name="stats_linechart_maxrate">Max rate</string>
    <string name="stats_linechart_avgrate">Avg. rate</string>
    <string name="piechart_finished_tasks">Finished</string>
    <string name="piechart_active_tasks">Active</string>
    <string name="task_in_this_category"> tasks in this category</string>
    <string name="added">added</string>
    <string name="default_banner_text">Get something done? </string>
    <string name="share_bit_using_other_apps">Hey all, wish you were getting more out of your time? Check out Bits on Play store!</string>
    <string name="sharing_use">Sharing use...</string>
    <string name="unarchive">unarchive</string>
    <string name="achievements_empty_message">Nothing yet! \nLong press on bits to archive</string>
    <string name="piechart_empty_message">Not enough data available! \nDiversify your life by creating tasks in different categories</string>
    <string name="burndown_chart_emptymessage">Not enough data now! \nCome back in a few days!</string>
    <string name="Instructions">Instructions</string>
    <string name="help_add">Add a new bit</string>
    <string name="to_get_started">to get started...</string>
    <string name="top_right_to_add">Top-right button to add</string>
    <string name="change_the_first">change the first</string>
    <string name="of_your_life">of your life!</string>
    <string name="got_it">Got it, thanks!</string>
    <string name="hey_you_found_it">Hey you found it!</string>
    <string name="swipe_left_for_done">Swipe left for done</string>
    <string name="swipe_right_to_skip">Swipe right to skip</string>
    <string name="long_press_for_actions">Long press for actions</string>
    <string name="tap_to_view_history">Tap to view history</string>
    <string name="tap_to_modify">Edit current task</string>
    <string name="tap_to_modify_details">Changed your plan? You can modify your schedule here. </string>
    <string name="tap_to_remove">Remove current task</string>
    <string name="tap_to_remove_details">What\'s done is done :P Your \'dones\', \'skips\' as well as \'lates\' will be kept in the stats</string>
    <string name="tap_to_achieve">Archive finished task</string>
    <string name="tap_to_achieve_details">Archived tasks are in the achievement section, with a task report reminding you of your victory!</string>
    <string name="no_email_client_installed">There are no email clients installed.</string>
    <string name="send_email">Send mail...</string>
    <string name="feedback_for_bits_app">Feedback for Bits app </string>
    <string name="feedback_email_addr">android.bitsapp@gmail.com</string>
    <string name="show_instructions_title">Show instructions</string>
    <string name="show_instructions_text">Show instructions below list of tasks</string>
    <string name="enable_shake_text">Shake to undo last done or skip action in Tasks section</string>
    <string name="enable_shake_title">Enable shake to undo</string>
    <string name="enable_swipe_feedback_title">Enable feedback when swipe</string>
    <string name="enable_swipe_feedback_text">Enable haptic/audio feedback when swipe to the right and left and it\'s good to release</string>
    <string name="pref_general_settings">General</string>
    <string name="pref_bits_settings">Bits</string>
    <string name="pref_notifications_settings">Notifications</string>
    <string name="show_notifications_text">Show notifications on status bar when tasks are about to late</string>
    <string name="show_notifications_title">Show notifications</string>
    <string name="show_notifications_delay_title">Notification time</string>
    <string name="show_notifications_delay_text">how long should I notify you before the task is late?</string>
    <string name="show_notifications_delay_diaglogtitle">Notification time before tasks get late</string>
    <string name="first_done">First Task Done!</string>
    <string name="first_new_task_title">New Task!</string>
    <string name="first_new_task_summary">Well done! You have just created your first task!</string>
    <string name="first_new_task_details">Tasks are arranged by their priority. Focus on your top tasks to achieve your goals.</string>
    <string name="first_done_summary">Marking your first done!</string>
    <string name="first_done_details">Tasks will be rearranged into the right order, it will go to the bottom as you do it as planned.</string>
    <string name="first_skip">Skipping</string>
    <string name="first_skip_summary">Run out of time? You can skip it!</string>
    <string name="first_skip_details">Skipping is useful when you can\'t finish a task on time and have to skip it for this time.</string>
    <string name="first_late">First late :\'/</string>
    <string name="first_late_summary">Task will be marked as late if you haven\'t done it on time. Try to get things done when the progress bar is red.</string>
    <string name="first_late_details">Just a friendly reminder though, chin up! :D</string>
    <string name="reward_history_on_tap">Timeline Unlocked!</string>
    <string name="reward_history_on_tap_summary">That\'s 3 tasks done! You deserve a reward!</string>
    <string name="reward_history_on_tap_details">You can now tap on an item to see its history!</string>
    <string name="reward_bitslist_help_off">That\'s 10 done!</string>
    <string name="reward_bitslist_help_off_summary">You\'re clearly getting the hang of things!</string>
    <string name="reward_bitslist_help_off_details">I\'ve disabled the help for you to save some space. \nYou can enable it from the settings.</string>
    <string name="reward_undo_on_shake">That\'s 30 done!</string>
    <string name="reward_undo_on_shake_summary">You deserve a reward!</string>
    <string name="reward_undo_on_shake_details">From now on you can shake to undo last skip/done on tasks! \nYou can disable that in the settings.</string>
    <string name="click_back_twice_to_quit">Click BACK again to quit</string>
    <string name="title_activity_in_app_purchase">Upgrade</string>
    <string name="hello_world">Hello world!</string>
    <string name="want_more_than_5_tasks">Get the hang of your first 5 tasks?</string>
    <string name="upgrade_to_add_unlimited">Upgrade to add unlimited tasks and get more control over your time!</string>
    <string name="all_for_just">All for just</string>
    <string name="upgrade_now">Upgrade Now!</string>
    <string name="failed_to_connect_to_play_store">Failed to make the purchase on Google Play.</string>
    <string name="make_sure_your_device_is_connected">Please make sure that your device is online and try again later. \nSorry about this.</string>
    <string name="unexpected_error">Unexpected failure while communicating with Play Store.</string>
    <string name="please_send_us_a_feedback">Please help us fix this issue by clicking on the feedback in the sidebar.\n\nSorry about this.</string>
    <string name="oops">Something went wrong :\'/</string>
    <string name="thank_you_for_your_purchase">Purchase completed!</string>
    <string name="thanks_to_people_like_you">Thanks to people like you, Bits can continue its development and bring better experience to you! \nNow go back and add new tasks as you like!</string>
    <string name="success">Success!</string>
    <string name="bits_reminder_title">Bits reminder</string>
    <string name="reminder_you_may_want_to">You may want to \"</string>
    <string name="reminder_questionmark">\"?</string>
    <string name="not_enough_data">Not enough data</string>
    <string name="tasks_by_category">Tasks by category</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="feeling_more_productive">Feeling more productive with</string>
    <string name="take_a_moment_to_rate">"? \nPlease take a moment to rate it!"</string>
    <string name="yeah_sure">Yeah, sure!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="skipped">Skipped!</string>
    <string name="opt_in_ads_support">Disable opt-in ads support</string>
    <string name="you_have_a_choice">And you do have a choice:</string>
    <string name="I_understand">In order to upgrade, you can opt-in the ads-support version or pay for the upgrade pacakge on Google Play.</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="ads_support">Opt-in Ads</string>
    <string name="but_you_can_optin_ads">But you can still opt-in ads support for bits!</string>
    <string name="ads_support_enabled">Ads support enabled</string>
    <string name="you_can_switch_to_upgrade_package_if_you_change_mind">You can always switch back to an upgrade package from Google Play in settings to disable ads.\n\nEnjoy!</string>
    <string name="opt_in_ads">Opt-in Ads</string>
    <string name="unlimited_tasks_with_ads_support">Click here to switch to an upgrade option from Google Play.</string>
    <string name="bits_done_around_the_word">%1$d+ dones around the world!</string>
</resources>