<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Instructions"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:padding="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/help_add" />


            <TextView
                style="@style/AppTheme.help_text_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/top_right_to_add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/help_swipe_left" />

            <TextView
                style="@style/AppTheme.help_text_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/swipe_left_for_done" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/help_swipe_right" />


            <TextView
                style="@style/AppTheme.help_text_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/swipe_right_to_skip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/help_long_press" />


            <TextView
                style="@style/AppTheme.help_text_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/long_press_for_actions" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/help_tap" />


            <TextView
                style="@style/AppTheme.help_text_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/tap_to_view_history" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>