<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffffff"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.siqi.bits.app.ui.NewBitFragment"
        android:padding="15dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bit_title_edittext"
            android:hint="@string/whats_on_your_mind"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/I_want_to_do_this"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/frequency_radio_group"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:checked="true"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="6"
                android:textSize="@dimen/large_text"
                android:button="@null"
                android:background="@drawable/radio_button_selector"
                android:gravity="center_horizontal" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/times_a"
            android:id="@+id/times_a"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/interval_radio_group"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_day"
                android:textSize="@dimen/large_text"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_week"
                android:checked="true"
                android:textSize="@dimen/large_text"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_month"
                android:textSize="@dimen/large_text"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal" />

            <RadioButton
                android:id="@+id/radio_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_year"
                android:textSize="@dimen/large_text"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/put_in_category"
            android:layout_gravity="center_horizontal" />

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridView"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:drawSelectorOnTop="false" />


    </LinearLayout>
</ScrollView>