<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context="com.siqi.bits.app.ui.NewBitActivity">


        <EditText
            android:id="@+id/bit_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/whats_on_your_mind"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/I_want_to_do_this"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/frequency_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="1"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="2"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center_horizontal"
                android:text="3"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="4"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="5"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="6"
                android:textSize="@dimen/large_text" />

        </RadioGroup>

        <TextView
            android:id="@+id/times_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/times_a"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/interval_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/radio_day"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center_horizontal"
                android:text="@string/radio_week"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/radio_month"
                android:textSize="@dimen/large_text" />

            <RadioButton
                android:id="@+id/radio_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/radio_year"
                android:textSize="@dimen/large_text" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/put_in_category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <views.ExpandingGridView
            android:id="@+id/category_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:columnWidth="60dp"
            android:focusable="true"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:stretchMode="spacingWidthUniform"
            android:verticalSpacing="5dp" />


    </LinearLayout>
</ScrollView>